--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(':ht_lib')
+    implementation project(':ht_common')
     if (!isModule.toBoolean()) {
         implementation project(':ht_main')
         implementation project(':ht_a')
