--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,4 @@ android.useAndroidX=false
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=false
 
-isModule=false
+isModule=true
