--- a/ht_main/build.gradle
+++ b/ht_main/build.gradle
@@ -49,7 +49,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(':ht_lib')
+    implementation project(':ht_common')
     annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
 
 }
