--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':ht_lib', ':ht_main', ':ht_a', ':ht_b'
+include ':app', ':ht_common', ':ht_main', ':ht_a', ':ht_b'
 rootProject.name='HTModulePattern'
