--- a/ht_common/src/main/AndroidManifest.xml
+++ b/ht_common/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ht.ht_lib" >
     <uses-permission android:name="android.permission.INTERNET" />
-    <application>
+    <application
+        android:theme="@style/AppTheme">
 
     </application>
 
