--- a/ht_main/src/main/module/AndroidManifest.xml
+++ b/ht_main/src/main/module/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ht.ht_main">
 
-    <application>
+    <application
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
